2008-02-13 Borut Razem <borut.razem AT siol.net>

	* src/SDCCmain.c, src/SDCCglue.c: fixed --c1mode
	* src/pic16/glue.c, src/SDCCast.c, src/SDCCast.h, src/SDCCBBlock.c,
	  src/SDCCcse.c, src/SDCCglue.c, src/SDCCicode.c, src/SDCCloop.c,
	  src/SDCCopt.c,  src/SDCCval.c:
	  fixed bug #1890273: SDCC Warning 154 shows wrong filename

2008-02-12 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCsymt.c (compareType): fixed bug 1309013

2008-02-09 Borut Razem <borut.razem AT siol.net>

	* src/SDCCval.c, src/SDCCval.h:
	  code cleaning, added function constChrVal()
	* src/SDCCglue.c, src/pic/glue.c, src/pic16/glue.c, src/SDCCast.c, src/SDCC.y:
	  call constChrVal() instead constVal()

2008-02-01 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c (resolveSymbols): added reentrancy check for parameters
	  of function pointer
	* src/SDCCerr.h,
	* src/SDCCerr.c: changed warning W_NONRENT_ARGS to error E_NONRENT_ARGS
	* support/regression/tests/absolute.c: added TestStruct TestVar (see also
	  bug 1859853)

2008-02-01 Raphael Neider <rneider AT web.de>

	* device/include/pic/pic16f886.h,
	* device/include/pic/pic16f887.h: added RA6 and RA7

2008-01-24 Raphael Neider <rneider AT web.de>

	* device/include/pic/pic16f88.h: added RA6 and RA7
	* device/lib/pic/libdev/disabled_pic16f886.c,
	* device/lib/pic/libdev/disabled_pic16f887.c: renamed and enabled

	* src/pic16/devices.inc,
	* device/include/pic16/pic18f2423.h,
	* device/include/pic16/pic18f2523.h,
	* device/include/pic16/pic18fregs.h,
	* device/lib/pic16/pics.all
	* device/lib/pic16/libdev/pic18f2423.c,
	* device/lib/pic16/libdev/pic18f2523.c: added 18f2423 and 18f2523
	* device/lib/pic16/libio/i2c.ignore,
	* device/lib/pic16/libio/usart.ignore,
	* device/lib/pic16/libio/adc.ignore: ignore new devices

2008-01-23 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c (createRMW): fixed bug 1582651

2008-01-20 Borut Razem <borut.razem AT siol.net>

	* src/SDCCcse.c: partially fixed enhancement request